--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.7)
 
 project(test_abstract_inheritance Fortran C)
 
-option(USE_64BIT_INTEGERS "Use 64-bit integers" OFF)
+option(USE_64BIT_INTEGERS "Use 64-bit integers" ON)
 
 # Compiler flags
 if(CMAKE_Fortran_COMPILER_ID MATCHES GNU)
 
-    set(CMAKE_Fortran_FLAGS "-std=f2008 -O3 -Wall -fopenmp")
+    set(CMAKE_Fortran_FLAGS "-std=f2008 -Wall")
 
     if(USE_64BIT_INTEGERS)
         set(CMAKE_Fortran_FLAGS
@@ -19,7 +19,7 @@ if(CMAKE_Fortran_COMPILER_ID MATCHES GNU)
 endif()
 
 if(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
-    set(CMAKE_Fortran_FLAGS "-fpp -O3 -warn all -stand f18 -qopenmp -parallel")
+    set(CMAKE_Fortran_FLAGS "-warn all -stand f18")
 
     if(USE_64BIT_INTEGERS)
         set(CMAKE_Fortran_FLAGS
@@ -36,11 +36,16 @@ endif()
 
 # Set sources to compile
 set(sources
-	main.F90
-	abstract_derived_class.F90
-	abstract_base_class.F90
-    test_class.F90
-    test_derived_class.F90
+    src/program.F90
+    src/class_A.F90
+    src/class_B.F90
+    src/class_C.F90
+    src/class_D.F90
+    src/submodule_class_A.F90
+    src/file_class.F90
+    src/global_out.F90
+    src/kinds.F90
+    src/parameters.F90
 )
 
 
