--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,17 @@
 cmake_minimum_required(VERSION 3.7)
 
-project(test_abstract_inheritance Fortran C)
-
-option(USE_64BIT_INTEGERS "Use 64-bit integers" ON)
+project(test_ifort_issue Fortran C)
 
 # Compiler flags
 if(CMAKE_Fortran_COMPILER_ID MATCHES GNU)
 
-    set(CMAKE_Fortran_FLAGS "-std=f2008 -Wall")
-
-    if(USE_64BIT_INTEGERS)
-        set(CMAKE_Fortran_FLAGS
-            "${CMAKE_Fortran_FLAGS} -fdefault-integer-8"
-            )
-    endif()
+    set(CMAKE_Fortran_FLAGS "-std=f2008 -Wall -fdefault-integer-8")
 
     message("-- Fortran compiler flags: ${CMAKE_Fortran_FLAGS}")
 endif()
 
 if(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
-    set(CMAKE_Fortran_FLAGS "-warn all -stand f18")
-
-    if(USE_64BIT_INTEGERS)
-        set(CMAKE_Fortran_FLAGS
-            "${CMAKE_Fortran_FLAGS} -i8"
-            )
-    else()
-        set(CMAKE_Fortran_FLAGS
-            "${CMAKE_Fortran_FLAGS} -i4"
-            )
-    endif()
+    set(CMAKE_Fortran_FLAGS "-warn all -stand f18 -i8")
 
      message("-- Fortran compiler flags: ${CMAKE_Fortran_FLAGS}")
 endif()
@@ -48,6 +30,6 @@ set(sources
 )
 
 
-add_executable(test_abstract_inheritance.x ${sources})
+add_executable(test_ifort_issue.x ${sources})
 
-set_target_properties(test_abstract_inheritance.x PROPERTIES LINKER_LANGUAGE Fortran)
+set_target_properties(test_ifort_issue.x PROPERTIES LINKER_LANGUAGE Fortran)
