f3552037e7d3fee5b3e3f52ee53de68c844d10bc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,10 +38,14 @@ endif()
 set(sources
     src/program.F90
     src/class_A.F90
-    src/class_BCD.F90
+    src/class_B.F90
+    src/class_C.F90
+    src/class_D.F90
     src/submodule_class_A.F90
     src/file_class.F90
     src/global_out.F90
+    src/kinds.F90
+    src/parameters.F90
 )
 
 
